@@ -1,6 +1,7 @@
 1.5.2
 - ability to insert visual separators into mod list and preset list
 - improved support for more Doom engines and file types
+- fixed incorrect relative paths to Save dir and Screenshot dir
 - minor bug-fixes
 
 1.5.1
